--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "engines" : { 
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
   },
   "scripts": {
     "build": "nuxt build",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.2",
+    "@vueuse/nuxt": "^10.0.2",
     "quasar": "^2.11.10"
   }
 }
