--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.2",
     "@vueuse/nuxt": "^10.0.2",
+    "jwt-decode": "^3.1.2",
     "quasar": "^2.11.10"
   }
 }
