--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "npm": ">=8.0.0 <9.0.0",
     "node": ">=16.0.0 <17.0.0"
   },
+  "overrides": {
+    "vue": "latest"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -18,10 +21,12 @@
     "nuxt-quasar-ui": "^1.6.1"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.9",
     "@quasar/extras": "^1.16.2",
     "@vueuse/nuxt": "^10.0.2",
     "google-auth-library": "^8.7.0",
     "jwt-decode": "^3.1.2",
+    "pinia": "^2.0.35",
     "quasar": "^2.11.10"
   }
 }
